--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "01CA0KS0X2NF3C6CG95VYF14NY": "jeu"
+    "01CA0KS0X2NF3C6CG95VYF14NY": "jeu",
+    "01CA0KS0X2NF3C6CG95VYF14NJ": "lego"
   }
 }
