--- a/idk/lego-bundle/manifest.json
+++ b/idk/lego-bundle/manifest.json
@@ -1,11 +1,12 @@
 {
-  "bundles": {
-    "Idk\\LegoBundle\\IdkLegoBundle": ["all"]
-  },
-  "container": {
-    "testlego": "lego"
-  },
-  "copy-from-recipe": {
-    "config/": "%CONFIG_DIR%/"
-  }
+    "bundles": {
+        "Idk\\LegoBundle\\IdkLegoBundle": ["all"]
+    },
+    "container": {
+        "testlego": "lego"
+    },
+    "copy-from-recipe": {
+        "config/": "%CONFIG_DIR%/"
+    },
+    "aliases": ["lego", "idk-lego"]
 }
