--- a/prestigejo/lego-media-bundle/0.1/config/routes/lego-media.yaml
+++ b/prestigejo/lego-media-bundle/0.1/config/routes/lego-media.yaml
@@ -1,3 +1,3 @@
 lego_media:
     resource: "@IdkLegoMediaBundle/Resources/config/routing/routes.yaml"
-    prefix: /admin/media
+    prefix: /lego/media
