--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "projects": {
     "01CA0KS0X2NF3C6CG95VYF14NY": "jeu",
     "01CA0KS0X2NF3C6CG95VYF14NA": "timeline",
-    "01CA0KS0X2NF3C6CG95VYF14NJ": "lego"
+    "01CA0KS0X2NF3C6CG95VYF14NJ": "lego",
+    "01C0RWTCGGJ418MR5M476SKKR1": "geostage"
   }
 }
